--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="og:title" content="UbuCare - Your Trusted Telehealth Service">
   <meta name="og:description" content="Experience seamless virtual healthcare with UbuCare. Consult with doctors online and receive medical assistance from anywhere.">
   <meta name="og:image" content="https://res.cloudinary.com/ddyhu3jn7/image/upload/v1739874711/logo_hwf1ls.jpg">
-  <meta name="og:url" content="https://yourwebsite.com">
+  <meta name="og:url" content="https://ubucare.oratech.com.ng/">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="UbuCare - Your Trusted Telehealth Service">
   <meta name="twitter:description" content="Join UbuCare for hassle-free online medical consultations and digital healthcare solutions.">
@@ -43,7 +43,7 @@
       "@context": "https://schema.org",
       "@type": "MedicalOrganization",
       "name": "UbuCare",
-      "url": "https://yourwebsite.com",
+      "url": "https://ubucare.oratech.com.ng/",
       "logo": "https://res.cloudinary.com/ddyhu3jn7/image/upload/v1739874711/logo_hwf1ls.jpg",
       "description": "UbuCare is a leading telehealth platform providing seamless online healthcare services, virtual consultations, and digital medical assistance.",
       "sameAs": [
